Update README and documentation for JNA/FFM dual implementation
- Update intro to describe both JNA and FFM native access implementations
- Replace 'in progress' language for oshi-core-java25 with release-ready description
- Add OSHI Common Module section describing native-free shared code
- Fix Codacy badge link
- Add CodeRabbit to Acknowledgments
- Update parent and oshi-core-java25 pom descriptions
- Sync index.md with README (HTML-escaped ampersands)